// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectInput Component SelectInput handles change 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1iiyd84-control"
      >
        <div
          class=" css-yhb162-ValueContainer"
        >
          <div
            class=" css-1dimb5e-singleValue"
          >
            option 1
          </div>
          <div
            class=" css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-3-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
          >
            <i
              class="icon icon"
              icon="fal,xmark"
            />
          </div>
          <span
            class=" css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION1"
      />
    </div>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput handles change with data-testid 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1iiyd84-control"
      >
        <div
          class=" css-yhb162-ValueContainer"
        >
          <div
            class=" css-1dimb5e-singleValue"
          >
            option 1
          </div>
          <div
            class=" css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-4-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
          >
            <i
              class="icon icon"
              data-testid="DATA-TEST-ID-clear"
              icon="fal,xmark"
            />
          </div>
          <span
            class=" css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value="OPTION1"
      />
    </div>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput handles change with empty value when clearable 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1iiyd84-control"
      >
        <div
          class=" css-yhb162-ValueContainer"
        >
          <div
            class=" css-1jqq78o-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-5-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="icon icon"
              data-testid="DATA-TEST-ID-magnifier"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput renders 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1iiyd84-control"
      >
        <div
          class=" css-yhb162-ValueContainer"
        >
          <div
            class=" css-1jqq78o-placeholder"
            id="react-select-2-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-2-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput renders disabled 1`] = `
<div>
  <div
    class="container"
  >
    <span
      class="typography"
    >
      -
    </span>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput renders highlight in readOnly 1`] = `
<div>
  <div
    class="container highlighted"
  >
    <span
      class="typography"
    >
      -
    </span>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput renders in readOnly 1`] = `
<div>
  <div
    class="container"
  >
    <span
      class="typography"
    >
      option 2
    </span>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput renders in readOnly with invalid value 1`] = `
<div>
  <div
    class="container"
  >
    <span
      class="typography"
    >
      -
    </span>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput renders with fieldsize, inError 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-d83tmf-control"
      >
        <div
          class=" css-yhb162-ValueContainer"
        >
          <div
            class=" css-1jqq78o-placeholder"
            id="react-select-7-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-7-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-7-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`SelectInput Component SelectInput renders without portal 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class=" css-1959ul7-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
      />
      <div
        class=" css-1iiyd84-control"
      >
        <div
          class=" css-yhb162-ValueContainer"
        >
          <div
            class=" css-1jqq78o-placeholder"
            id="react-select-6-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-qbdosj-Input"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-6-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-6-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            class=" css-1u9des2-indicatorSeparator"
          />
          <div
            aria-hidden="true"
          >
            <i
              class="icon icon"
              icon="fal,chevron-down"
            />
          </div>
        </div>
      </div>
      <input
        name="SELECT"
        type="hidden"
        value=""
      />
    </div>
  </div>
</div>
`;
